import { ValueObject } from '../../core/domain/ValueObject';
import { UniqueEntityID } from "../../core/domain/UniqueEntityID";

  

  export class ElevatorID extends UniqueEntityID {


    
  }