@startuml

skinparam linetype ortho


rectangle #36827F{
class Building  << Root >> << Entity >>
class BuildingDescription  << (v,#A4C2E5) ValueObject >>
class BuildingName  << (v,#A4C2E5) ValueObject >>
class BuildingCode  << (v,orange) ValueObject >> << unique >>
class BuildingSize  << (v,#A4C2E5) ValueObject >>
}

rectangle #D499B9{
class Floor  << Root >> << Entity >>
class FloorNumber  << (v,orange) ValueObject >> << unique >>
class FloorDescription  << (v,#A4C2E5) ValueObject >>
class FloorMap  << Entity >>

}
rectangle #9055A2{
class Elevator  << Root >> << Entity >>
class ElevatorId  << (v,orange) ValueObject >> << unique >>
class ElevatorCoordinates << (v,#A4C2E5) ValueObject >>
}


Building "1"->"*" Floor
Building "*"-->"0..1" BuildingDescription
Building "1"-->"1" BuildingName
Building "*"-->"1" BuildingSize
Building "1"-->"1" BuildingCode

Floor "1"-d->"1" FloorMap
Floor "*"-u>"1" FloorNumber
Floor "*"->"1" FloorDescription
FloorMap "1"-d---->"0..1" Elevator


Elevator "1"-d->"1" ElevatorId
Elevator "1"->"1" ElevatorCoordinates


@enduml
